--- a/server/client/src/styles/PageStyles/login.css
+++ b/server/client/src/styles/PageStyles/login.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: #55C867
 }
 
@@ -20,4 +20,17 @@ body{
 
 .boton{
     width: 70%
-}
+} */
+
+#nprogress .bar {
+          background: red !important;
+      }
+
+      #nprogress .peg {
+          box-shadow: 0 0 10px red, 0 0 5px red !important;
+      }
+
+      #nprogress .spinner-icon {
+          border-top-color: red !important;
+          border-left-color: red !important;
+      }
