--- a/server/client/src/styles/PageStyles/login.css
+++ b/server/client/src/styles/PageStyles/login.css
@@ -22,6 +22,12 @@
     width: 70%
 } */
 
+.input-wrapper {
+    display: flex;
+}
+
+
+
 #nprogress .bar {
           background: red !important;
       }
