--- a/server/client/src/styles/ComponentsStyles/footer.css
+++ b/server/client/src/styles/ComponentsStyles/footer.css
@@ -23,3 +23,11 @@
 .footer-final {
     padding-bottom: 0.1%;
 }
+
+@media (max-width: 580px) {
+
+    .content-1 {
+        margin-bottom: 20px;
+    }
+
+}
