--- a/server/client/src/styles/PageStyles/principal.css
+++ b/server/client/src/styles/PageStyles/principal.css
@@ -1,7 +1,43 @@
 .center-div{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%
 }
+
+.text-container {
+    display: inline;
+    text-align: center;
+}
+
+.img-container {
+    display: flex;
+    justify-content: center;
+}
+
+.img {
+    width: 80%
+}
+
+/* @media (max-width: 450px) {
+    .img {
+        width: 80%
+    }
+} */
+
+@media (max-width: 300px) {
+    .input-group-text {
+        display: none
+    }
+}
+
+@media (min-width: 860px) {
+    .img-container{
+        padding-bottom: 30px;
+    }
+}
+
 
 .Main-page {
     overflow-x: hidden;
@@ -9,6 +45,10 @@
 
 .footer {
     background-color: #542C23;
+}
+
+.icon {
+    font-size: 20px;
 }
 
 
