--- a/server/client/src/styles/PageStyles/login.css
+++ b/server/client/src/styles/PageStyles/login.css
@@ -4,7 +4,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+   background-color: green;
+
 }
+
 
 .card-container {
     border-radius: 15px;
