--- a/server/client/src/styles/PageStyles/home.css
+++ b/server/client/src/styles/PageStyles/home.css
@@ -8,3 +8,40 @@
     -ms-transition: opacity 2s;       
     transition: opacity 2s;
 }
+
+.chips-home-user {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  
+  .chips-container-home-user {
+    margin-left: 30px;
+    padding-left: 13px;
+    padding-right: 13px;
+    border-radius: 40px;
+    color: white;
+    display: flex;
+    margin-top: 7px;
+  }
+
+  .chip-element-user {
+    margin-top: 3px;
+}
+
+.titulo-container {
+
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.chips-container-post-user {
+    margin-left: 7px;
+    padding-left: 13px;
+    padding-right: 13px;
+    border-radius: 40px;
+    color: white;
+    margin-top: 10px;
+}
